--- a/conditionals.html
+++ b/conditionals.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<script src="js/utils.js"></script>
 <script src="js/conditionals.js"></script>
 </body>
 </html>
