--- a/welcome.html
+++ b/welcome.html
@@ -6,65 +6,85 @@
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
+<main>
 <h1 class="fancy-header" >Welcome to Veridian Dynamics!</h1>
 <p>At Veridian Dynamics, <strong>we</strong> solve your problems with <strong><em>technology</em></strong></p>
 <hr>
+<section class="lists-wrapper">
+    <div class="list">
 <h2>Core Values</h2>
+
+
 <ul>
     <li>Competence</li>
     <li>Involvement</li>
     <li>Technology</li>
 </ul>
+    </div>
+    <div class="list">
 <h2>Our Process</h2>
 <ol>
     <li>Plan</li>
     <li>Evaluate</li>
     <li>Implement</li>
 </ol>
+    </div>
+    <div class="list">
 <h2>2020 Vision</h2>
 <ul>
     <li>Become #1 in Technology</li>
     <li>Increase Success by 20%</li>
     <li>Increase Business by 30%</li>
 </ul>
+    </div>
+    </section>
 <hr>
-<h2>Company Vision</h2>
-<img src="images/pexels-admiral-general-m-⭐⭐⭐⭐⭐-godshepherdly-848573.jpg" width="500" alt="sunset">
-<img src="images/pexels-christina-morillo-1181403.jpg" width="500"  alt="office meeting">
-<img src="images/pexels-djordje-petrovic-2102416.jpg" width="500"  alt="office desk">
-<img src="images/pexels-tomas-anunziata-3876327.jpg" width="500"  alt="beach">
-
-<h2>Our Product</h2>
-<table>
-    <thead>
+<h2 class="vision">Company Vision</h2>
+<section class="photos-wrapper">
+    <div class="photo-wrapper">
+        <img src="images/pexels-admiral-general-m-⭐⭐⭐⭐⭐-godshepherdly-848573.jpg" width="500" alt="sunset">
+        <img src="images/pexels-christina-morillo-1181403.jpg" width="500"  alt="office meeting">
+    </div>
+    <div class="photo-wrapper">
+        <img src="images/pexels-djordje-petrovic-2102416.jpg" width="500"  alt="office desk">
+        <img src="images/pexels-tomas-anunziata-3876327.jpg" width="500"  alt="beach">
+    </div>
+</section>
+<section class="products">
+    <h2>Our Product</h2>
+    <table class="product-table">
+        <thead>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Features</th>
+            </tr>
+        </thead>
+        <tbody>
         <tr>
-            <th>Plan</th>
-            <th>Price</th>
-            <th>Features</th>
+            <td>Starter</td>
+            <td>$99</td>
+            <td>Base Technology</td>
         </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Starter</td>
-        <td>$99</td>
-        <td>Base Technology</td>
-    </tr>
-    <tr>
-        <td>Advanced</td>
-        <td>$199</td>
-        <td>Additional Features</td>
-    </tr>
-    <tr>
-        <td>Premium</td>
-        <td>$499</td>
-        <td>Unlimited</td>
-    </tr>
-    </tbody>
-</table>
-<br>
-<em>All products come with our quality guarantee</em>&#8482. <br>
-<br>
-<a href="#" title="Go to top of page">Go to the top of the page</a>
-
-</body>
-</html>
+        <tr>
+            <td>Advanced</td>
+            <td>$199</td>
+            <td>Additional Features</td>
+        </tr>
+        <tr>
+            <td>Premium</td>
+            <td>$499</td>
+            <td>Unlimited</td>
+        </tr>
+        </tbody>
+    </table>
+    </section>
+</main>
+    <br>
+    <footer class="footer">
+    <em class="emphasis">All products come with our quality guarantee</em>&#8482. <br>
+    <br>
+        <div class="top"><a href="#" title="Go to top of page">Go to the top of the page</a></div>
+    </footer>
+    </body>
+    </html>
