--- a/basic-structure-of-webpage.html
+++ b/basic-structure-of-webpage.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="column justify-center">
                     <div class="hero-text">
-                        <h1>Welcome to our site</h1>
+                        <p class="bold-hero-text">Welcome to our site</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus asperiores assumenda at, aut cum delectus dolore exercitationem expedita illum impedit ipsa nostrum omnis pariatur quos repellat sint, sunt voluptate, voluptates.</p>
                     </div>
                     <div class="column">
