--- a/layout-elements.html
+++ b/layout-elements.html
@@ -17,8 +17,8 @@
           <div class="column">
               <nav class="row justify-right">
                   <div class="column shrink"><a href="#" title="Go Home">Home</a></div>
-                  <div class="column shrink"><a href="#" title="About">Overview</a></div>
-                  <div class="column shrink"><a href="#" title="Our Team">Features</a></div>
+                  <div class="column shrink"><a href="#" title="Go to Overview">Overview</a></div>
+                  <div class="column shrink"><a href="#" title="View Features">Features</a></div>
               </nav>
           </div>
           <div class="column shrink">
@@ -30,7 +30,7 @@
     </header>
       <section class="container justify-center hero-scene">
             <div class="row">
-                <div class="column justify-top">
+                <div class="column justify-center">
                     <p>An exercise in Web Layouts</p>
                     <p class="bold-hero-text">We are all masters of the frontend.</p>
                     <p>Home is behind, the world ahead and there are<br>
