--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -62,8 +62,46 @@
                     </dl>
                 </div>
             </div>
-            <section class="container">
-
+            <section class="container justify-center">
+                <div class="row">
+                    <div class="column justify-center">
+                        <h3 class="park-title">Great Smoky Mountains National Park</h3>
+                        <ul class="park-facts">
+                            <li>Great Smoky Mountains National Park was established in 1934.</li>
+                            <li>The Appalachian Trail passes through Great Smoky Mountains National Park.</li>
+                            <li>Great Smoky Mountains National Park runs through Tennessee and North Carolina.</li>
+                            <li>The park consists of 522,419 acres.</li>
+                        </ul>
+                        <h3 class="park-title">Blue Ridge Parkway</h3>
+                        <ul class="park-facts">
+                            <li>The Blue Ridge Parkway was originally known as the Appalachian Scenic Highway.
+                                It was created as part of President Franklin Delano Roosevelt’s New Deal, which was
+                                designed to created jobs and improve infrastructure after the Great Depression.</li>
+                            <li>Big Bend</li>
+                            <li>The scenic road’s construction began in 1935 near Cumberland Knob, North Carolina and
+                                ended in 1987 near Grandfather Mountain State Park. All but the last 7 miles was
+                                completed in 1966.</li>
+                            <li>The Eastern Band of Cherokee Indians protested the construction of the parkway, and
+                                were successful in getting more favorable terms.</li>
+                            <li>The Cherokee people were not the only ones inconvenienced by the construction of the
+                                parkway. Although the road created lots of jobs, it also displaced many people and
+                                generated many new laws and regulations for the region.</li>
+                        </ul>
+                        <h3 class="park-title">Yellowstone</h3>
+                        <ul class="park-facts">
+                            <li>Yellowstone encompasses 3,472 square miles (2,221,766 acres) which makes it larger
+                                than Rhode Island and Delaware combined.</li>
+                            <li>There are more than 10,000 hydrothermal features in Yellowstone. The four types of
+                                thermal features are geysers, hot springs, mud pots, and fumaroles.
+                            </li>
+                            <li>Yellowstone is home to more than 500 active geysers (more than half the world’s geysers)
+                                .</li>
+                            <li>Yellowstone Lake has 131.7 sq. miles of surface area and 141 miles of shoreline.
+                                It is the largest high elevation lake in North America.</li>
+                        </ul>
+                    </div>
+                </div>
+                <button class="last-li">Change last list element</button>
             </section>
         </main>
 </div>
