--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -104,6 +104,34 @@
                 <button class="last-li">Change last list element</button>
             </section>
         </main>
+    <section class="container justify-center">
+        <div class="row">
+            <div class="column justify-center">
+                <div class="row frame-container justify-space-between">
+                    <div class="picture-frame frame-1">
+                        <img class="frame-image frame-image-1" src="images/glacier.jpeg" alt="glacier">
+                    </div>
+                    <div class="picture-frame frame-2">
+                        <img class="frame-image frame-image-2" src="images/yellowstone.jpeg" alt="yellowstone">
+                    </div>
+                    <div class="picture-frame frame-3">
+                        <img class="frame-image frame-image-3" src="images/river.webp" alt="river">
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="column align-center">
+                            <button class="swap-1">Swap</button>
+                        </div>
+                    <div class="column align-center">
+                        <button class="swap-2">Swap</button>
+                    </div>
+                    <div class="column align-center">
+                        <button class="swap-3">Swap</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 
 
