--- a/ajax-store.html
+++ b/ajax-store.html
@@ -9,15 +9,15 @@
 <body>
 <div class="page-wrapper">
     <header class="container justify-center">
-        <div class="row">
+        <div class="row header-height header-image">
             <div class="column justify-center text-center">
                 <h1>My Tool Store</h1>
             </div>
         </div>
     </header>
     <section class="container grow">
-        <div class="row">
-            <div class="column">
+        <div class="row body-height">
+            <div class="column grow">
                 <table id="products">
                     <thead>
                     <tr>
@@ -42,6 +42,7 @@
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="js/ajax-store.js"></script>
+<script src="js/utils.js"></script>
 <script>
     (function () {
         "use strict";
