weather map current day column complete

--- a/weather_map.html
+++ b/weather_map.html
@@ -79,12 +79,13 @@
                             <h3>Weather Forecast</h3>
 
                         </div>
+                            <!--    Map-->
                         <div class="column">
                             <div id='map' style='width: 400px; height: 300px;'></div>
                         </div>
                     </div>
-                    <div class="row ext-forcast">
-
+                    <div class="row ext-forecast" id="ext-forecast">
+                <!--       Weather Cards-->
                     </div>
                 </div>
             </div>
