updated cards, wind direction

--- a/weather_map.html
+++ b/weather_map.html
@@ -40,12 +40,11 @@
 
                 <div class="container">
                     <!--                    current temp and wind speed-->
-                    <div class="row current-weather-row align-center">
-                        <div class="column" id="current-temp">
-
+                    <div class="row current-weather-row">
+                        <div class="column shrink" id="current-temp">
 
                         </div>
-                        <div class="column" id="wind-speed">
+                        <div class="column justify-center" id="wind-speed">
 
                         </div>
                     </div>
@@ -68,8 +67,8 @@
                 <!--                4-day forecast-->
                 <div class="container">
                     <header class="row header-height align-center">
-                        <div class="column">
-                            <h1>Extended Forecast</h1>
+                        <div class="column shrink">
+                            <h1 class="forecast-title gradient">World Forecast</h1>
                         </div>
                     </header>
                 </div>
