--- a/movies.html
+++ b/movies.html
@@ -90,6 +90,23 @@
             </div>
         </div>
     </section>
+    <section class="container">
+        <div class="row genre-row justify-space-between">
+            <div class="movie-genre action">Action</div>
+            <div class="movie-genre comedy">Comedy</div>
+            <div class="movie-genre thriller">Thriller</div>
+            <div class="movie-genre drama">Drama</div>
+            <div class="movie-genre sci-fi">Sci-fi</div>
+        </div>
+    </section>
+    <section class="container">
+            <div class="row align-center catalog-row-height catalog-title">
+                <h1 class="column shrink">Catalog</h1>
+            </div>
+        <div class="row">
+            <!--  movies -->
+        </div>
+    </section>
 </div>
 </body>
 </html>
