rotation on 3d carousel

--- a/movies.html
+++ b/movies.html
@@ -29,61 +29,61 @@
             </div>
         </div>
     </header>
-    <section class="container hero-container">
-        <div class="row justify-center">
+    <section class="container">
+        <div class="row justify-center hero-container">
             <div class="hero-scene">
-                <svg class="left-arrow" width="1200pt" height="1200pt" version="1.1" viewBox="0 0 1200 1200"
+                <svg class="left-arrow" id="left" width="1200pt" height="1200pt" version="1.1" viewBox="0 0 1200 1200"
                      xmlns="http://www.w3.org/2000/svg">
                     <path d="m600 30c-151.17 0-296.16 60.055-403.05 166.95s-166.95 251.88-166.95 403.05 60.055 296.16 166.95 403.05 251.88 166.95 403.05 166.95c100.05 0 198.35-26.336 285-76.367 86.652-50.027 158.61-121.98 208.63-208.63 50.031-86.652 76.367-184.95 76.367-285 0-151.17-60.055-296.16-166.95-403.05s-251.88-166.95-403.05-166.95zm280.2 620.04-216 216c-17.148 17.148-42.145 23.848-65.57 17.57-23.422-6.2773-41.723-24.574-48-48-6.2734-23.426 0.42188-48.422 17.57-65.57l103.8-102.84h-304.32c-24.18 0-46.523-12.898-58.613-33.84s-12.09-46.738 0-67.68c12.09-20.941 34.434-33.84 58.613-33.84h302.88l-102.12-102.24c-17.148-17.148-23.848-42.145-17.57-65.57s24.574-41.723 48-48c23.426-6.2773 48.422 0.42188 65.57 17.57l216 216c13.285 13.32 20.383 31.602 19.559 50.398v2.1602c0.039062 17.961-7.0859 35.191-19.801 47.879z"/>
                 </svg>
                 <div class="carousel">
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
+                        <div class="img-wrapper">
+                            <img src="images/Thor.jpeg">
+                        </div>
+                    </div>
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
-                    <div class="carousel__cell">
-                        <div class="img-wrapper">
-                            <img src="images/black-panther.webp">
-                        </div>
-                    </div>
-                    <div class="carousel__cell">
+                    <div class="carousel-cell">
                         <div class="img-wrapper">
                             <img src="images/black-panther.webp">
                         </div>
                     </div>
                 </div>
-                <svg class="right-arrow" width="1200pt" height="1200pt" version="1.1" viewBox="0 0 1200 1200"
+                <svg class="right-arrow" id="right" width="1200pt" height="1200pt" version="1.1" viewBox="0 0 1200 1200"
                      xmlns="http://www.w3.org/2000/svg">
                     <path d="m600 241.04c95.203 0 186.5 37.816 253.82 105.14 67.32 67.32 105.14 158.62 105.14 253.82s-37.816 186.51-105.14 253.83c-67.32 67.32-158.62 105.14-253.82 105.14-63.012 0-124.91-16.586-179.48-48.09-54.57-31.508-99.883-76.82-131.39-131.39-31.504-54.57-48.09-116.47-48.09-179.48 0-95.203 37.816-186.5 105.14-253.82 67.32-67.32 158.62-105.14 253.83-105.14zm-176.46 390.48 136.03 136.03c10.801 10.801 26.543 15.02 41.293 11.066 14.754-3.9531 26.277-15.477 30.23-30.23s-0.26562-30.492-11.066-41.293l-65.367-64.766h191.65c15.227 0 29.297-8.1211 36.91-21.309 7.6172-13.188 7.6172-29.438 0-42.625-7.6133-13.188-21.684-21.309-36.91-21.309h-190.74l64.312-64.387c10.797-10.801 15.016-26.543 11.062-41.293-3.9531-14.754-15.477-26.277-30.227-30.23-14.754-3.9531-30.496 0.26562-41.293 11.066l-136.03 136.03h-0.003906c-8.3672 8.3906-12.836 19.902-12.316 31.738v1.3633c-0.023437 11.309 4.4648 22.16 12.469 30.152z"/>
                 </svg>
@@ -100,13 +100,23 @@
         </div>
     </section>
     <section class="container">
-            <div class="row align-center catalog-row-height catalog-title">
-                <h1 class="column shrink">Catalog</h1>
+            <div class="row justify-space-between align-center catalog-row-height catalog-title">
+                <div class="column shrink">Catalog</div>
+                <div class="column shrink">
+                    <nav class="row">
+                        <div class="column shrink"><a href="#" title="Go Home">+ Add movie</a></div>
+                    </nav>
+                </div>
             </div>
-        <div class="row">
+
+        <div id="loading-icon">
+            <img src="./images/loading-gif.gif" alt="Loading...">
+        </div>
+        <div class="row content" id="#content">
             <!--  movies -->
         </div>
     </section>
 </div>
+<script type="module" src="js/movies.js"></script>
 </body>
 </html>
